Add page protection enforcement
